--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Outfit:wght@100..900&display=swap');
 @import "tailwindcss";
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Outfit;
+}
+body{
+    min-height:100vh;
+}
+.app{
+    width: 80%;
+    margin: auto;
+}
