--- a/frontend/src/components/Banner.css
+++ b/frontend/src/components/Banner.css
@@ -1,8 +1,9 @@
 .banner {
   position: relative;
-  width: 100%;
+  margin: auto;
+  margin-top: 10px;
+  width: 80%;
   height: 450px;
-  overflow: hidden;
 }
 
 .banner-container {
@@ -28,7 +29,10 @@
   object-fit: cover;
   border-radius: 20px;
   padding: 10px;
+  box-shadow: 0px 6px 32px rgba(245, 222, 179, 0.75);
+
 }
+
 
 /* Tablet */
 @media (max-width: 1024px) {
