--- a/frontend/src/pages/shop/Shop.css
+++ b/frontend/src/pages/shop/Shop.css
@@ -10,7 +10,7 @@
 
 /* Back to home */
 .back-home {
-  color: #b48b57; /* soft caramel brown */
+  color: #b48b57; 
   cursor: pointer;
   margin-bottom: 10px;
   font-weight: 600;
@@ -22,8 +22,8 @@
 .shop-page input[type="search"] {
   width: 100%;
   padding: 12px 15px;
-  border: 1px solid #e4d8c8; /* beige border */
-  background: #faf5ee;       /* soft subtle beige */
+  border: 1px solid #e4d8c8;  
+  background: #faf5ee;      
   border-radius: 12px;
   outline: none;
   font-size: 15px;
@@ -35,21 +35,19 @@
   border-color: #c9a47a;
   box-shadow: 0 0 8px rgba(201, 164, 122, 0.4);
 }
-
-/* Products Grid */
+ 
 .product-grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
   gap: 22px;
 }
 
-/* Product Card */
 .product-card {
     position: relative;
   background: #ffffff;
   padding: 18px;
   border-radius: 14px;
-  border: 1px solid #f0e6d8; /* light beige border */
+  border: 1px solid #f0e6d8; 
   box-shadow: 0px 4px 14px rgba(219, 195, 168, 0.25);
   text-align: center;
   transition: transform 0.2s ease, box-shadow 0.2s ease;
@@ -59,13 +57,13 @@
   transform: translateY(-4px);
   box-shadow: 0px 8px 22px rgba(201, 164, 122, 0.25);
 }
-/* Wishlist Icon */
+
 .wishlist-icon {
   position: absolute;
   top: 24px;
   right: 22px;
   font-size: 22px;
-  color: wheat;/* beige gold */
+  color: wheat;
   cursor: pointer;
   transition: transform 0.2s ease, color 0.2s ease;
   z-index: 10;
@@ -76,29 +74,25 @@
   color: #d79635;
 }
 
-/* IMAGE WRAPPER */
 .image-box {
   width: 100%;
   height: 190px;
   border-radius: 12px;
-  overflow: hidden;       /* for zoom effect */
+  overflow: hidden;     
   margin-bottom: 10px;
 }
 
-/* IMG INSIDE */
 .image-box img {
   width: 100%;
   height: 100%;
-  object-fit: cover;       /* fills card perfectly */
+  object-fit: cover;       
   transition: transform 0.35s ease;
 }
 
-/* Hover Image Zoom */
 .product-card:hover .image-box img {
   transform: scale(1.15);
 }
 
-/* Title + Name */
 .product-card h3 {
   font-size: 16px;
   font-weight: 600;
@@ -112,7 +106,6 @@
   margin-bottom: 8px;
 }
 
-/* Price */
 .price {
   display: block;
   font-weight: 700;
@@ -121,9 +114,8 @@
   margin-bottom: 15px;
 }
 
-/* Add to Cart Button */
 .addCart {
-  background: #c9a47a; /* warm beige gold */
+  background: #c9a47a; 
   color: white;
   border: none;
   padding: 10px 0;
@@ -139,7 +131,6 @@
   background: #b58c64;
 }
 
-/* No product message */
 .noProduct {
   grid-column: 1 / -1;
   text-align: center;
@@ -147,7 +138,6 @@
   color: #a39a8c;
   padding: 20px;
 }
-/* Mobile: Force 2 products per row */
 @media (max-width: 600px) {
   .product-grid {
     grid-template-columns: repeat(2, 1fr);
