--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -95,11 +95,63 @@
     min-width: 18px;
     text-align: center;
 }
+/* Profile Circle */
+.profile-wrapper {
+  position: relative;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
 
-/* LOGIN BUTTON */
+.profile-circle {
+  width: 38px;
+  height: 38px;
+  background-color:#98744f;
+  color: white;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.2s ease;
+}
+
+.profile-circle:hover {
+  background-color:#4b3b2b; 
+}
+
+/* Dropdown Menu */
+.profile-dropdown {
+  position: absolute;
+  top: 48px;
+  right: 0;
+  background: whitesmoke;
+  border-radius: 10px;
+  box-shadow: 0px 4px 15px rgba(0,0,0,0.15);
+  /* padding: 10px 0; */
+  width: 150px;
+  z-index: 100;
+}
+
+.dropdown-itemA, .dropdown-itemB {
+  padding: 10px 15px;
+  cursor: pointer;
+  font-size: 15px;
+  transition: 0.2s ease;
+  border-radius: 10px;
+}
+
+.dropdown-itemA:hover {
+  background: burlywood; 
+}
+.dropdown-itemB:hover {
+  background: #db3b3b; 
+}
+ 
 .login-btn {
     padding: 8px 16px;
-    background: #f3e5c3;           /* Beige button */
+    background: #f3e5c3;           
     border-radius: 12px;
     border: 1px solid #d4b48c;
     font-weight: bold;
