--- a/frontend/src/components/Banner.css
+++ b/frontend/src/components/Banner.css
@@ -6,12 +6,14 @@
   height: 450px;
 }
 
+/* Container */
 .banner-container {
   position: relative;
   width: 100%;
   height: 100%;
 }
 
+/* Slides */
 .banner-slide {
   position: absolute;
   inset: 0;
@@ -30,14 +32,12 @@
   border-radius: 20px;
   padding: 10px;
   box-shadow: 0px 6px 32px rgba(245, 222, 179, 0.75);
-
 }
 
-
-/* Tablet */
 @media (max-width: 1024px) {
   .banner {
     height: 350px;
+    width: 90%; 
   }
 
   .banner-slide img {
@@ -46,10 +46,10 @@
   }
 }
 
-/* Mobile */
 @media (max-width: 768px) {
   .banner {
-    height: 260px;
+    height: 240px; 
+    width: 92%;
   }
 
   .banner-slide img {
@@ -61,7 +61,8 @@
 /* Small Mobile */
 @media (max-width: 480px) {
   .banner {
-    height: 200px;
+    height: 190px;
+    width: 95%;
   }
 
   .banner-slide img {
